fixing more layout issues on the landing page, and changed size of detail photos

--- a/src/styles/detailPhotos.scss
+++ b/src/styles/detailPhotos.scss
@@ -1,6 +1,6 @@
 .photo-wrapper {
     width: 100%;
-    height: 140vh;
+    height: 120vh;
     box-sizing: border-box;
 }
 
